@@ -4,6 +4,8 @@
 
 Gora Change Log
 
+* GORA-119 implement a filter enabled scan in gora (ferdy, kturner, enis, Tien Nguyen Manh via lewismc)
+
 * GORA-290 StatefulHashMap removes the entry when put with same value (Alparslan Avci via hsaputra)
 
 * GORA-231 Provide better error handling in AccumuloStore.readMapping when file does not exist (Apostolos Giannakidis)
